Fix the tabs on mobile ML live page.

--- a/assets/scss/ml-responsive_tabs.scss
+++ b/assets/scss/ml-responsive_tabs.scss
@@ -1,3 +1,6 @@
+$o-tabs-is-silent: false;
+@import 'o-tabs/main';
+
 #ml-main-content,
 #ml-user-comments {
 	outline: 0;
